fix: number overflow

--- a/src/app/components/Calculator/Calculator.module.scss
+++ b/src/app/components/Calculator/Calculator.module.scss
@@ -8,6 +8,7 @@
   height: 88px;
   width: 100%;
   border-radius: 8px;
+  overflow: hidden;
 }
 
 .panel_content {
